# Nmap Changelog ($Id$); -*-text-*-

o Fixed IPv6 routing table alignment on NetBSD.

o [NSE] Added http-phpmyadmin-dir-traversal by Alexey Meshcheryakov.

o Added a service probe for Erlang distribution nodes.
  [Michael Schierl]

o Updated libdnet to not SIOCIFNETMASK before SIOCIFADDR on OpenBSD. This was
  reported to break on -current as of May 2013. [Giovanni Bechis]

o Fixed address matching for SCTP (-PY) ping. [Marin Maržić]

o Removed some non-ANSI-C strftime format strings ("%F") and
  locale-dependent formats ("%c") from NSE scripts and libraries.
  C99-specified %F was noticed by Alex Weber. [Daniel Miller]

o [Zenmap] Added Polish translation by Jacek Wielemborek.

o [NSE] Added http-coldfusion-subzero. It detects Coldfusion 9 and 10
  vulnerable to a local file inclusion vulnerability and grabs the 
  version, install path and the administrator credentials. [Paulino Calderon]

o [Nsock] Added a minimal regression test suite for nsock. [Henri Doreau]

o [NSE] Updated redis-brute.nse and redis-info.nse to work against
  the latest versions of redis server. [Henri Doreau]

o [Ncat] Fixed errors in conneting to IPv6 proxies. [Joachim Henke]

o Added a service probe for Minecraft servers. [Eric Davisson]

o [NSE] Updated hostmap-bfk to work with the latest version of their website. 
  [Paulino Calderon]

o [NSE] Added XML structured output support to hostmap-bfk, hostmap-robtex,
  and hostmap-ip2hosts. [Paulino Calderon]

o [NSE] Added hostmap-ip2hosts. It uses the service provider ip2hosts.com
  to list domain names pointing to the same IP address. [Paulino Calderon]

o [NSE] Added http-vuln-cve2013-0156. It detects Ruby on Rails servers
  vulnerable to remote command execution (CVE-2013-0156). [Paulino Calderon]

o Added a service probe for the Hazelcast data grid. [Pavel Kankovsky]

o [NSE] Rewrote telnet-brute for better compatibility with a variety
  of telnet servers. [nnposter]
